--- a/form.html
+++ b/form.html
@@ -6,7 +6,7 @@
 </head>
 <body id="body-color">
 <div id="Sign-In">
-<fieldset style="width:30%"><legend>LOG-IN HERE</legend>
+<fieldset style="width:30%"><legend>LOGIN HERE</legend>
 <form action="filename.php" method="POST" >
 User Name<br><input type="text" name="user" size="40"><br>
 Password <br><input type="password" name="pass" size="40"><br>
